Произведен рефакторинг в CamelCase. База данных теперь располагается локально, в папке db. Больше не должно быть бинарников и библиотек.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-Spring.datasource.url = jdbc:mysql://localhost:3306/mmapromotion
-Spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-Spring.datasource.username = mainuser
-Spring.datasource.password = mainpass
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./db/mmapromotion
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=update
